[package]
edition = "2021"
name = "yozo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = {version = "0.6.4", features = ["http2", "query", "multipart", "json"]}
dotenv = "0.15.0"
futures = "0.3.26"
hyper = {version = "0.14.24", features = ["full"]}
mediatype = "0.19.13"
redis = {version = "0.22.3", features = ["ahash", "aio", "tokio-comp"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = {version = "1.25.0", features = ["full"]}
tokio-uring = {version = "0.4.0", optional = true, features = ["bytes"]}
tokio-util = "0.7.4"
tower = "0.4.13"
tower-http = "0.3.5"
uuid = {version = "1.3.0", features = ["v4", "serde"]}
